# Homomorphic_Encryption_for_Genetic_Data_HElib_BGV

./: README.md
HElib/helib_install/helib_pack/include/: gmp.h
HElib/helib_install/helib_pack/include/NTL/: ConfigLog.h
HElib/helib_install/helib_pack/lib/pkgconfig/: gmp.pc
HElib/helib_pack/lib/pkgconfig/: gmp.pc
HElib/helib_pack/share/cmake/helib/: helibTargets.cmake
helibTest/: CMakeLists.txt  comparator.cpp  compare.cpp  main.cpp  test.cpp
helibTest/xcode-build/: CMakeCache.txt
